@@ -2,6 +2,6 @@ DIST genpatches-3.12-71.base.tar.xz 1931704 BLAKE2B c2dc6cef51f7145e04f649b7bbbe
 DIST genpatches-3.12-71.extras.tar.xz 18496 BLAKE2B e12edd22a44c42f1171bbf153c27b48789f55a7c05fd7918c056adb2c08b4c58b6bd616792f785e8fe1082e37b057c7ca3e557a19c3cd98ac5ed4df9219d080b SHA512 2545956f8d9ebcc9a5ec0429d492c8b5c23d8d89fdd46ec595e82310f480658543d364bbc47f6527e438ce3d352e17c7ea3431e3589e2c51f5447a504dbd9d7b
 DIST linux-3.10.45-arch1.amd64.config 143793 BLAKE2B f81409a31493107198a863dd0569a7958861b6d95ad4320b3f9975e802a3efc4a0e4c40cde5f59055770b7b47aa24db33da063aca93c5b43a801cac8156b0160 SHA512 6c25ab34f8b625b6df46f95954ff3892d85f4638849d73f3d4b27dd4aa7b826d7f21bfbe3a583425d08523428db6e193d2cafd29ec20e517b7731af067ac23c5
 DIST linux-3.12.72.tar.xz 76581176 BLAKE2B d88520400de40d595c294bbae83b8f2c5f11cc7db0977b5c553124858480c8b7fa6fd076b091ad0aa20c484c3ef3f9b0ebad2af67a9e1cdfaad4c14263df3900 SHA512 ddbd181ad6d2e939a28f1e2e08f58cd308a8d32ce3f575fcfc3d0f174557426f45d8f3c3a062c42f046a4501d4253cf495139ef52e59d96461b50d96cdc9b46b
-EBUILD gentoo-kernel-3.12.72.ebuild 1556 BLAKE2B 30269ed3894d57262ae857d271bd938392efb6b58c9af2816f90249337fab39109027aa82ef3fe2100c094f197e9ac3a9ae2601128051abc2b658c9ce1aa382d SHA512 fe142be78748a9e5a2348910c8afc06d65e607ce89a098adaa43499275f63510394048afa77b3fffe6add3e0038a38c3afa944169803a8d87d46adf0869412ca
-MISC ChangeLog 294 BLAKE2B ed67082f1cce20fd892916cb7ea4019e76aeb77a7f5b4da67fa956fb05ae155631e8557d9ae4ec944c6fdce5837e932df5dfabb7f9f37f585693a101b23caca9 SHA512 34bd963df021fbe729604560c466b14c39846ec0379acd61bde9a341377025273dfa099a166c4f5fbdc113b7fbd48b632ac24898ce0a51f775c3f98dc8d79961
-MISC metadata.xml 352 BLAKE2B d45c3f23945883bcb819c225e43715f5cfd86090f3e928dfb62b26a7b38b98421ee0c0d3b4fe9ebdb9de39c294cbc288c1731e9493f69436a6916034d8b834d9 SHA512 e3b9651b8f0fa3b07626b4cfb01456e4ecea1ae053ad9e9e1b3c925a5de601b35c9f3983535d62edae9ef49a40fe4c319e013542908839f30415f6ad85463e24
+EBUILD gentoo-kernel-3.12.72.ebuild 2428 BLAKE2B f533fb4c3bf6d3a5c0bf0b7e74c565c5b4cdcc181b0d5129ce680be5632cea289934d4fa45903950352510c1dcee8cd5b00d80987b012c5784f636642bd7a5e5 SHA512 29485af7f600662eb4abfa11ab3b7d8610098885878774f04b5c9679bd7692f15fc82fdf7f20dbe1b3d2e35fcd8942f3bc187eefb37bf938266475a9d1698d25
+MISC ChangeLog 346 BLAKE2B 1932ad5638d8a147eb652709785d5ff61f9549ca12075c6ea5505a5ae8550d7f6e436fd9196c63056cbff98fdbd7215b6fe78a33f93d274bb8e6e89722b43267 SHA512 fab2e9c9eb8797e8e0cca252f97e4577dedee792e5bd56f1668140add6bc92c5041f572a0de0354a62b27b19025a7e7515ec8e7cc741bd590f77685fd8b4d534
+MISC metadata.xml 949 BLAKE2B 9d7b7111401bab934ed9f721decf61655753a31dd7b12d3f9c23f9cebf41da002db5ad16cd6b61f1771e318422d060d2467bc39d1477781fa638b11d1ddab5d5 SHA512 2840df9805940009d7b38799d3e997eb260ff32b29c1e108a5ae6a13265db6695f283ccf4b4ebbd83d9045ca4dbcd6a6f2233fce41c685d39c355f205d10276a
