@@ -6,6 +6,14 @@
 		<name>Distribution Kernel Project</name>
 	</maintainer>
 	<use>
+		<flag name='deadline'>use the deadline I/O scheduler</flag>
+		<flag name='fbcondec'>add support for fbcondecor, which allows you to add backgrounds to framebuffers</flag>
 		<flag name='initramfs'>Build initramfs along with the kernel.</flag>
+		<flag name='pax'>patch in some sort of pax/hardened xattr stuff</flag>
+		<flag name='pogoplug'>add support for the pogoplug filesharing device</flag>
+		<flag name='selinux'>fix a selinux bug</flag>
+		<flag name='systemd'>use systemd for the init system</flag>
+		<flag name='thinkpad-backlight'>add fix for lenovo thinkpad backlights</flag>
+		<flag name='thinkpad-micled'>add support for the thinkpad microphone led</flag>
 	</use>
 </pkgmetadata>
